[project]
name = "tdbc"
version = "v0.1.0"
description = "tdbc / toadback"
authors = [{ name = "Cees van de Griend", email = "cees.van.de.griend@griend.eu" }]
dependencies = [
]
requires-python = ">=3.10"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.license]
text = "GPL-3.0"

[project.urls]
Documentation = " https://www.griend.eu/tdbc/"
Source = "https://github.com/cvdg/tdbc"

[tool.pdm]

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.3",
    "black>=23.10.1",
    "pylint>=3.0.2",
    "pytest-cov>=4.1.0",
]

[tool.pdm.scripts]
test = "python3 -m pytest"
lint = "python3 -m pylint --disable=C,R src/ tests/"
format = "python3 -m black src/ tests/"

[tool.pytest.ini_options]
addopts = ["--cov=src"]
python_classes = ["Test"]
python_functions = ["test_"]
python_files = ["test_*.py"]
testpaths = ["tests/"]

[tool.black]
line-length = 119
target-version = ["py37"]

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"