[project]
name = "tdbc"
version = "0.1.1"
description = "tdbc / toadback"
authors = [
    { name = "Cees van de Griend", email = "cees.van.de.griend@griend.eu" },
]

classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]


dependencies = ["duckdb>=0.9.1", "pandas>=2.1.0", "matplotlib>=3.8.1"]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "GPL-3" }

[project.urls]
Documentation = " https://www.griend.eu/tdbc/"
Source = "https://github.com/cvdg/tdbc"

[project.optional-dependencies]
notebook = [
    "jupyterlab>=4.0.8",
    "jupysql>=0.10.3",
    "duckdb-engine>=0.9.2",
    "toml>=0.10.2",
]
[tool.pdm.dev-dependencies]
dev = ["pytest>=7.4.3", "pytest-cov>=4.1.0", "black>=23.10.1", "pylint>=3.0.2"]

[tool.pdm.scripts]
test = "python3 -m pytest"
lint = "python3 -m pylint --disable=C,R src/ tests/"
format = "python3 -m black src/ tests/"
all = { composite = ["test", "lint", "format"] }
jupyter = "jupyter lab --notebook-dir=src/notebook/"


[tool.pytest.ini_options]
addopts = ["--cov=src"]
python_classes = ["Test"]
python_functions = ["test_"]
python_files = ["test_*.py"]
testpaths = ["tests/"]

[tool.black]
line-length = 119
target-version = ["py37"]

[tool.jupysql.SqlMagic]
autopandas = true
feedback = false
displaycon = false
